Fix home tab slash

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -618,7 +618,7 @@ const { title = 'Bookmark Dashboard' } = Astro.props;
                     <span class="site-name">Bojan's HomePage 2026</span>
                 </div>
                 <div class="nav-tabs">
-                    <a href={`${import.meta.env.BASE_URL}index.html`} class="nav-tab">Home</a>
+                    <a href={`${import.meta.env.BASE_URL}/index.html`} class="nav-tab">Home</a>
                     <a href={`${import.meta.env.BASE_URL}/e-servisi.html`} class="nav-tab">E-servisi</a>
                     <a href={`${import.meta.env.BASE_URL}/institucii.html`} class="nav-tab">Institucii</a>
                     <a href={`${import.meta.env.BASE_URL}/linux.html`} class="nav-tab">Linux</a>
