--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,6 +44,7 @@ const homeLinks = {
         <option value="google">Google</option>
         <option value="bing">Bing</option>
         <option value="duckduckgo">DuckDuckGo</option>
+        <option value="brave">Brave</option>
         <option value="yahoo">Yahoo</option>
         <option value="yandex">Yandex</option>
         <option value="baidu">Baidu</option>
