--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -771,8 +771,8 @@ const { title = 'Bookmark Dashboard' } = Astro.props;
                 </div>
                 <div class="nav-tabs">
                     <a href={`${import.meta.env.BASE_URL}/`} class="nav-tab">Home</a>
-                    <a href={`${import.meta.env.BASE_URL}/e-servisi/`} class="nav-tab">E-servisi</a>
-                    <a href={`${import.meta.env.BASE_URL}/institucii/`} class="nav-tab">Institucii</a>
+                    <a href={`${import.meta.env.BASE_URL}/e-servisi/`} class="nav-tab">Е-Сервиси</a>
+                    <a href={`${import.meta.env.BASE_URL}/institucii/`} class="nav-tab">Институции</a>
                     <a href={`${import.meta.env.BASE_URL}/linux/`} class="nav-tab">Linux</a>
                 </div>
                 <div class="theme-switcher">
