--- a/src/pages/e-servisi.astro
+++ b/src/pages/e-servisi.astro
@@ -10,6 +10,7 @@ const eServisi = [
   { name: 'ЦРМ-ПОРТАЛ', url: 'https://e-submit.crm.com.mk/SSO/login.aspx?ReturnUrl=https://crm.com.mk/', abbrev: 'CR' },
   { name: 'С-ПЕО', url: 'https://peo.finance.gov.mk/', abbrev: 'ES' },
   { name: 'ЕСЈН', url: 'https://www.e-nabavki.gov.mk/', abbrev: 'EJ' },
+  { name: 'Е-ПАЗАР', url: 'https://e-pazar.gov.mk/', abbrev: 'EM' },
   { name: 'Е-СТАТ', url: 'https://estat.stat.gov.mk/', abbrev: 'ST' },
   { name: 'ЕВН-ХОМЕ', url: 'https://online.evn.mk/', abbrev: 'EV' },
   { name: 'ЕСАРУ', url: 'http://emis.mon.gov.mk/', abbrev: 'EA' },
