--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ const homeLinks = {
 
   <div class="groups-container">
     <div class="group">
-      <h2 class="group-header">Elektronska Pošta</h2>
+      <h2 class="group-header">Електронска пошта</h2>
       <div class="links-grid">
         {homeLinks.elektronskaPosta.map(link => (
           <a href={link.url} target="_blank" class="link-item" data-abbrev={link.abbrev}>
@@ -68,7 +68,7 @@ const homeLinks = {
     </div>
 
     <div class="group">
-      <h2 class="group-header">Info</h2>
+      <h2 class="group-header">Инфо</h2>
       <div class="links-grid">
         {homeLinks.info.map(link => (
           <a href={link.url} target="_blank" class="link-item" data-abbrev={link.abbrev}>
@@ -79,7 +79,7 @@ const homeLinks = {
     </div>
 
     <div class="group">
-      <h2 class="group-header">Klaud Prostor</h2>
+      <h2 class="group-header">Клауд простор</h2>
       <div class="links-grid">
         {homeLinks.klaudProstor.map(link => (
           <a href={link.url} target="_blank" class="link-item" data-abbrev={link.abbrev}>
